--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -176,7 +176,7 @@
       </button>
       }
 
-      <button mat-stroked-button color="primary">
+      <button mat-stroked-button color="primary" (click)="sendMessage()">
         <mat-icon>message</mat-icon> Message
       </button>
       }
