style: Add box-sizing property to universal selector for consistent layout

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,6 +79,7 @@ body {
 * {
   scrollbar-width: thin;
   scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
+  box-sizing: border-box;
 }
 
 @media print {
