feat: Implement messages routing and structure with main and list components. Remove box-sizing from CSS, onle single global assignment.

--- a/src/app/pages/messages/messages.component.html
+++ b/src/app/pages/messages/messages.component.html
@@ -224,6 +224,8 @@
 
     <div class="message-list" #messagesWrapper>
 
+      <router-outlet></router-outlet>
+
       @if (hasMoreMessages() && !isLoadingMore()) {
       <div class="load-more-indicator">
         <p class="load-more-hint">Scroll up to load older messages</p>
