--- a/src/app/pages/relays/relays.component.html
+++ b/src/app/pages/relays/relays.component.html
@@ -66,6 +66,30 @@
           <mat-card-header>
             <mat-card-title>
               <div class="info-title">
+                <mat-icon class="info-icon">dns</mat-icon>
+                Direct Message relays
+              </div>
+            </mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <p>
+              Nostria advices Nostr users to not use different relays for Direct Messages. If you want this advanced
+              feature,
+              you can use a different Nostr client that supports it.
+            </p>
+            <p>
+              Click the button below to update your Direct Messages Relays to be the same relays as your User Relays.
+            </p>
+            <p>
+              <button mat-flat-button (click)="updateDirectMessageRelayList()">Update Direct Message Relay List</button>
+            </p>
+          </mat-card-content>
+        </mat-card>
+
+        <mat-card class="info-card">
+          <mat-card-header>
+            <mat-card-title>
+              <div class="info-title">
                 <mat-icon class="info-icon">warning</mat-icon>
                 Deprecated Warning
               </div>
@@ -80,29 +104,6 @@
             </p>
             <p>
               <button mat-flat-button (click)="cleanFollowingList()">Remove Relays from Following List</button>
-            </p>
-          </mat-card-content>
-        </mat-card>
-
-        <mat-card class="info-card">
-          <mat-card-header>
-            <mat-card-title>
-              <div class="info-title">
-                <mat-icon class="info-icon">dns</mat-icon>
-                Direct Message relays
-              </div>
-            </mat-card-title>
-          </mat-card-header>
-          <mat-card-content>
-            <p>
-              Nostria advices Nostr users to not use different relays for Direct Messages. If you want this advanced feature, 
-              you can use a different Nostr client that supports it.
-            </p>
-            <p>
-              Click the button below to update your Direct Messages Relays to be the same relays as your User Relays.
-            </p>
-            <p>
-              <button mat-flat-button (click)="updateDirectMessageRelayList()">Update Direct Message Relay List</button>
             </p>
           </mat-card-content>
         </mat-card>
