--- a/src/app/components/loading-overlay/loading-overlay.component.html
+++ b/src/app/components/loading-overlay/loading-overlay.component.html
@@ -2,5 +2,16 @@
   <div class="loading-content">
     <mat-spinner diameter="64"></mat-spinner>
     <p class="loading-message">{{ message }}</p>
+    
+    @if (logMessages().length > 0) {
+      <div class="log-messages">
+        @for (logMsg of logMessages(); track logMsg.id) {
+          <div class="log-message" [class.fade-out]="logMsg.fadeOut" [class]="'log-level-' + logMsg.level">
+            <span class="log-level">[{{ logMsg.level.toUpperCase() }}]</span>
+            <span class="log-text">{{ logMsg.text }}</span>
+          </div>
+        }
+      </div>
+    }
   </div>
 </div>
