feat: Update media preview dialog to include media type and title, enhance styling for image previews

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -777,13 +777,13 @@ iframe {
 }
 
 /* Image dialog styles */
-.image-dialog {
-  .mat-mdc-dialog-container .mdc-dialog__surface {
-    border-radius: 8px;
-    overflow: hidden;
-    background-color: white;
-  }
-}
+// .image-dialog {
+//   .mat-mdc-dialog-container .mdc-dialog__surface {
+//     border-radius: 8px;
+//     overflow: hidden;
+//     background-color: white;
+//   }
+// }
 
 /* Welcome dialog styles */
 // .welcome-dialog {
