--- a/src/app/pages/profile/profile-header/profile-header.component.scss
+++ b/src/app/pages/profile/profile-header/profile-header.component.scss
@@ -43,11 +43,18 @@
     //     }
     // }
 
+    &.mobile {
+        flex-direction: column;
+        gap: 0;
+        align-items: center;
+        top: -60px;
+        position: relative;
+    }
+
     &.compact {
         // When compact class is applied
-        flex-direction: column;
+        flex-direction: row;
         position: initial;
-        border: 2px solid red;
 
         // First div should be fixed at 80px in compact mode
         >div:first-child {
@@ -109,6 +116,10 @@
             transform: scale(1.05);
             box-shadow: var(--mat-sys-level5);
         }
+    }
+
+    .mobile & {
+        top: 0px;
     }
 
     .compact & {
