feat: Improve the account top right button.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -325,17 +325,14 @@ mat-sidenav-content {
 
 .profile-button {
   margin-left: 8px;
-  padding: 0 !important;
-
-  .mat-icon {
-    font-size: 32px;
-    height: 32px;
-    width: 32px;
-  }
 
   .profile-button-avatar {
     margin: 4px;
   }
+}
+
+.profile-button-picture {
+  padding: 0 !important;
 }
 
 .profile-content {
