--- a/src/app/app.html
+++ b/src/app/app.html
@@ -165,7 +165,7 @@
       </button>
     </mat-menu>
 
-    <button mat-icon-button (click)="toggleProfileSidenav()" aria-label="Toggle profile" class="profile-button">
+    <button mat-icon-button [class.profile-button-picture]="accountState.profile()?.data?.picture" (click)="toggleProfileSidenav()" aria-label="Toggle profile" class="profile-button">
       @if (accountState.profile()?.data?.picture) {
       <img [src]="accountState.profile()?.data?.picture" class="profile-button-avatar" alt="Profile picture">
       } @else {
