--- a/src/styles.scss
+++ b/src/styles.scss
@@ -517,7 +517,7 @@ mat-card-content li {
   display: inline-flex;
   align-items: center;
   cursor: pointer;
-  padding: 4px 8px;
+  padding: 4px 12px 4px 0px;
   border-radius: 16px;
   transition: background-color 0.2s;
   font-weight: 500;
